Añado prácticas de SMR2

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -37,6 +37,12 @@ pin: true
 - UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
 - UD12 - [¿Qué son las VLAN?](/posts/vlan/)
 
+### Prácticas (SMR2)
+
+- P08 - [Práctica: Red estática en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
+- P09 - [Práctica: Enrutamiento con Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
+- P10 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
+
 ## Evaluación 3
 
 - UD13 - [Capa de Transporte](/posts/capa-transporte)
