--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -160,17 +160,58 @@ Al margen de la selección «básica» de elementos a través de CSS, que suele 
   </div>
 </details>
 
-{:.question}
-¿Qué diferencia hay entre un margin y un padding?
 
-{:.question}
-¿Qué significa que una web es responsive?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre un margin y un padding?</summary>
+  <div class="card-body" markdown="1">
 
-{:.question}
-¿Qué hago si quiero añadir dos clases al mismo elemento?
+La representación básica del modelo de cajas se basa en varios conceptos importantes, como veremos a continuación:
 
-{:.question}
-¿Qué hago si quiero añadir el mismo estilo a varios elementos?
+- El borde (border), en negro, es el límite que separa el interior del exterior del elemento.
+- El márgen (margin), en naranja, es la parte exterior del elemento, por fuera del borde.
+- El relleno (padding), en verde, es la parte interior del elemento, entre el contenido y el borde.
+- El contenido, en azul, es la parte interior del elemento, excluyendo el relleno.
+
+![Modelo de cajas CSS](modeloDeCajas.png)
+_Modelo de cajas CSS_
+
+Leer el artículo [Modelo de cajas](https://lenguajecss.com/css/modelo-de-cajas/que-es/) para saber más.
+    
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué significa que una web es responsive?</summary>
+  <div class="card-body" markdown="1">
+
+El diseño web responsive o adaptativo es una técnica de diseño web que busca la correcta visualización de una misma página en distintos dispositivos. Desde ordenadores de escritorio a tablets y móviles.
+
+Hoy en día accedemos a sitios web desde todo tipo de dispositivos; ordenador, tablet, smartphone… por lo que, cada vez más, nos surge la necesidad de que nuestra web se adapte a los diferentes tamaños de los mismos.
+    
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué hago si quiero añadir dos clases al mismo elemento?</summary>
+  <div class="card-body" markdown="1">
+
+Los separo con un espacio.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué hago si quiero añadir el mismo estilo a varios elementos?</summary>
+  <div class="card-body" markdown="1">
+
+Puedo usar la coma.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué diferencia hay entre uppercase y capitalize?
@@ -209,8 +250,17 @@ Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacio
 {:.question}
 ¿Qué comportamiento define la propiedad `overflow`? ¿Se puede definir un overflow horizontal y vertical por separado?
 
-{:.question}
-¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?</summary>
+  <div class="card-body" markdown="1">
+
+[Pseudoclases CSS](https://lenguajecss.com/css/selectores/pseudoclases/)
+
+[Pseudoelementos CSS](https://lenguajecss.com/css/selectores/pseudoelementos/)
+    
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Puedo seleccionar diferentes elementos que compartan un atributo?
