--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -220,7 +220,11 @@ Puedo usar la coma.
 ¿Qué significa indentar?
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué diferencia hay entre los elementos `block` y los elementos `inline`?</summary>
+  <summary class="card-header question" markdown="1">
+  
+¿Qué diferencia hay entre los elementos `block` y los elementos `inline`?
+  
+  </summary>
   <div class="card-body" markdown="1">
 
 Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion/propiedad-display/)
@@ -233,7 +237,11 @@ Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion
 ¿Qué son las small-caps?
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?</summary>
+  <summary class="card-header question" markdown="1">
+  
+¿Qué diferencias hay entre las posiciones `static`, `relative`, `fixed`, `absolute`, `sticky`?
+  
+  </summary>
   <div class="card-body" markdown="1">
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9VRkcnQ3GpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -244,8 +252,19 @@ Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacio
   </div>
 </details>
 
-{:.question}
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué es el `z-index`? ¿A mayor `z-index` más delante o más detrás? ¿Se puede un `z-index` negativo?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Coloca un elemento en el eje de profundidad, más cerca o más lejos del usuario.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Qué comportamiento define la propiedad `overflow`? ¿Se puede definir un overflow horizontal y vertical por separado?
@@ -271,14 +290,54 @@ Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacio
 {:.question}
 ¿De dónde adónde va los valores de los colores RGB? ¿Qué significa la A de RGBA?
 
-{:.question}
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿De dónde adónde va el valor de los colores HUE?
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+Las siglas HSL significan matiz de color (hue), saturación y luminosidad (brillo). La primera cifra selecciona el matiz de color, representado con H en el círculo exterior de la imagen. Se trata de un valor ANGLE  de 0deg a 360deg. Por otro lado, las dos siguientes, son el porcentaje PERCENT de saturación y el brillo del color, respectivamente, en ambos casos un valor de 0% a 100%.
+
+Leer [Formato HSL](https://lenguajecss.com/css/colores-y-fondos/colores-css/#formato-hsl).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Existe la propiedad `transparency`?
 
+  </summary>
+  <div class="card-body" markdown="1">
+
+No.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+
 {:.question}
-¿Cuál  es el efecto elipsis de CSS?
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
+
+¿Cuál  es el efecto `ellipsis` de CSS de la propiedad `text-overflow`?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Cuando el texto no cabe, se añaden puntos suspensivos.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Para que  sirve definir un `@font-face` en CSS?
@@ -312,7 +371,11 @@ div:hover {
 ```
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué hace el valor `ease` del `animation-timing-function`?</summary>
+  <summary class="card-header question">
+  
+¿Qué hace el valor `ease` del `animation-timing-function` markdown="1"?
+  
+  </summary>
   <div class="card-body" markdown="1">
 
 Mira este ejemplo de W3Schools [Elements with Different timing function Values](https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_animation-timing-function2)
