--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -28,7 +28,9 @@ Aunque esto no es totalmente cierto como se indica en el artículo [¿Qué es la
   </div>
 </details>
 
-{:.question}
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué creéis que hace el siguiente código?
 
 ```css
@@ -37,7 +39,7 @@ body {
 }
 
 h1 {
-  color: white; // Pondrá el texto en blanco
+  color: white;
   text-align: center;
 }
 
@@ -46,6 +48,16 @@ p {
   font-size: 20px;
 }
 ```
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+`color: white;` pondrá el texto en blanco.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 
 ## TRES maneras de añadir CSS al HTML
 
@@ -132,14 +144,54 @@ p {
 <p id="bienvenida">Bienvenida con estilo</p>
 ```
 
-{:.question}
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué tipos de selectores hay? 
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+Los básicos son los de:
+
+- etiqueta
+- clase
+- identificador
+
+Pero hay más, ya que podemos usar los combinators, las pseudoclases, los pseudoelementos y selectores por atributo.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Pueden dos etiquetas HTML tener el mismo id?
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+Los identificadores deben ser únicos para identificar de manera unequívoca el elemento.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Y si añadimos varios estilos al mismo elemento? ¿Qué ocurrirá?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Se irán procesando en cascada sobreescribiendose unos a otros.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué son y para qué sirven los combinators o combinadores?</summary>
@@ -213,11 +265,37 @@ Puedo usar la coma.
   </div>
 </details>
 
-{:.question}
-¿Qué diferencia hay entre uppercase y capitalize?
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
 
-{:.question}
+¿Qué diferencia hay entre `text-transform: uppercase` y `text-transform: capitalize` de la propiedad ?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+- `uppercase` para convertir textos a mayúsculas.
+- `lowercase` para convertir textos a minúsculas.
+- `capitalize` poner sólo la primera letra en mayúscula.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué significa indentar?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Se llama indentación de código al hecho de utilizar sangrado (mover ligeramente hacia la derecha) en las líneas de código para facilitar la lectura, e indicar visualmente si nos encontramos en el interior de una función, bucle, condicional, etc...
+
+Si quieres saber más puedes leer el artículo [Indentación de código](https://lenguajejs.com/javascript/introduccion/indentacion/).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
@@ -233,8 +311,20 @@ Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion
   </div>
 </details>
 
-{:.question}
-¿Qué son las small-caps?
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
+¿Qué es `font-variant: small-caps`?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Puedes verlo en [aquí](https://www.w3schools.com/cssref/tryit.php?filename=trycss_font-variant).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
@@ -266,8 +356,27 @@ Coloca un elemento en el eje de profundidad, más cerca o más lejos del usuario
   </div>
 </details>
 
-{:.question}
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué comportamiento define la propiedad `overflow`? ¿Se puede definir un overflow horizontal y vertical por separado?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+La propiedad `overflow` (desbordamiento en español) establece el comportamiento de desbordamiento. Es similar al menú de Google Sheets que se ve en la siguiente Figura.
+
+![Overflow o desbordamiento en Google Sheet](overflow.png)
+_Overflow o desbordamiento en Google Sheet_
+
+Se puede definir tanto el overflow tanto en el eje X como en el eje Y con las propiedades `overflow-x` y `overflow-y` respectivamente.
+
+Lee el apartado [La propiedad overflow del artículo ](https://lenguajecss.com/css/modelo-de-cajas/que-es/#la-propiedad-overflow) si quieres saber más.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?</summary>
@@ -281,14 +390,62 @@ Coloca un elemento en el eje de profundidad, más cerca o más lejos del usuario
   </div>
 </details>
 
-{:.question}
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Puedo seleccionar diferentes elementos que compartan un atributo?
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+Si. Es el llamado selector por atributo que está explicado en el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributos/).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué diferencia hay entre el selector de atributo `[attribute~="value"]` y el  selector `[attribute*="value"]`?
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+- `[attribute*="value"]` indica que el atributo `atribute` contiene el texto `value`.
+- `[attribute~="value"]` nos permitiría seleccionar los elementos HTML que tengan un atributo con una lista de palabras separadas por espacios, donde una de ellas es el texto que hemos escrito a continuación. Se trata de una versión más restrictiva del comparador `*=`.
+
+Lee el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributos/) si quieres saber más.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿De dónde adónde va los valores de los colores RGB? ¿Qué significa la A de RGBA?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Las formas de indicar un color en CSS son las siguientes:
+
+| Esquema   | Nombre                                  | Descripción                                                       |
+|-----------|-----------------------------------------|-------------------------------------------------------------------|
+| `red`     | Palabra clave predefinida               | Establece un color mediante una palabra clave predefinida.        |
+| `rgb()`   | Función RGB                             | Utiliza una función rgb() (rojo, verde, azul).                    |
+| `rgba()`  | Función RGB con canal alfa              | Función rgb() o rgba() con un canal alfa (opacidad) añadido.      |
+| `#rrggbb` | Código RGB hexadecimal                  | Notación RGB abreviada en hexadecimal.                            |
+| `#rgb`    | Código RGB hexadecimal con canal alfa   | Notación RGB abreviada en hexadecimal con un canal alfa añadido.  |
+| `hsl()`   | Función HSL                             | Función hsl() (matiz de color, saturación y brillo).              |
+| `hsla()`  | Función HSL con canal alfa              | Función hsl() o hsla() con un canal alfa añadido.                 |
+
+Puedes probarlo tú mismo en [este enlace](https://www.w3schools.com/cssref/tryit.php?filename=trycss_func_rgba).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 
 <details class="card mb-2">
@@ -315,18 +472,14 @@ Leer [Formato HSL](https://lenguajecss.com/css/colores-y-fondos/colores-css/#for
   </summary>
   <div class="card-body" markdown="1">
 
-No.
+No. Existe la `opacity`.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
 
-
-{:.question}
-
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
-
 
 ¿Cuál  es el efecto `ellipsis` de CSS de la propiedad `text-overflow`?
 
@@ -335,20 +488,66 @@ No.
 
 Cuando el texto no cabe, se añaden puntos suspensivos.
 
+Puedes ver el comportamiento de la propiedad `text-overflow` en [este enlace](https://www.w3schools.com/cssref/tryit.php?filename=trycss3_text-overflow).
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
 
-{:.question}
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Para que  sirve definir un `@font-face` en CSS?
 
-{:.question}
-¿Qué hace el método skew?
+  </summary>
+  <div class="card-body" markdown="1">
 
-{:.question}
+La regla @font-face permite descargar una fuente o tipografía de una página web, cargarla en el navegador y utilizarla en nuestras páginas aunque no esté instalada en el sistema. Todo ello de forma transparente al usuario, sin que deba realizar ninguna acción.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
+¿Qué son/hacen las funciones `skewX()` y `skewY()`?
+
+  </summary>
+  <div class="card-body" markdown="1">
+
+Las funciones de deformación disponibles en CSS son las siguientes:
+
+| Funciones   | Significado                                                                  |
+|-------------|------------------------------------------------------------------------------|
+| skewX(xdeg) | Establece un ángulo de ANGLE xdeg para una deformación 2D respecto al eje X. |
+| skewY(ydeg) | Establece un ángulo de ANGLE ydeg para una deformación 2D respecto al eje Y. |
+
+Puedes ver el comportamiento de esta propiedad en [este enlace](https://www.w3schools.com/css/tryit.asp?filename=trycss3_transform_skew).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué ocurre si aplicamos el siguiente estilo `transform: rotateX(90deg);`?
 
-{:.question}
+  </summary>
+  <div class="card-body" markdown="1">
+
+Puedes ver el comportamiento de esta propiedad en [este enlace](https://www.w3schools.com/css/tryit.asp?filename=trycss3_transform_rotate).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
+  <summary class="card-header question" markdown="1">
+
 ¿Qué ocurrirá aquí?
 
 ```html
@@ -370,10 +569,19 @@ div:hover {
 </body>
 ```
 
+  </summary>
+  <div class="card-body" markdown="1">
+
+Que el ancho del div se modificará dependiendo de si el ratón está encima del mismo o no.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 <details class="card mb-2">
-  <summary class="card-header question">
+  <summary class="card-header question" markdown="1">
   
-¿Qué hace el valor `ease` del `animation-timing-function` markdown="1"?
+¿Qué hace el valor `ease` del `animation-timing-function`?
   
   </summary>
   <div class="card-body" markdown="1">
@@ -408,8 +616,6 @@ Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
 
 - [Ejemplo de como NO hacer las cosas](https://userinyerface.com/)
 - [Principios de usabilidad web de Jacob Nielsen y el diseño UX](https://es.semrush.com/blog/usabilidad-web-principios-jakob-nielsen/)
-
-
 
 ## Para todo lo demás... 
 
