Añado práctica opcional

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -30,6 +30,8 @@ pin: true
 - P05 - [Práctica: Capa de enlace](/posts/practica-capa-enlace/)
 - P06 - [Práctica: Introducción a redes con Packet Tracer](/posts/practica-introduccion-packet-tracer/)
 
+- PO01 - [Práctica opcional: Introducción a redes con Packet Tracer 2](/posts/practica-opcional-introduccion-packet-tracer-2)
+
 ## Evaluación 2
 
 - UD09 - [Enrutamiento: estático y dinámico](/posts/enrutamiento/)
