Añado actividad resuelta

--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -80,6 +80,11 @@ No es recomendable usar la 1ª y la última subred como indica la norma RFC actu
 - La última subred no se usa ya que la dirección de broadcast de esta subred coincide con la dirección de broadcast de la red original.
 
 {:.question}
+## Actividad resuelta
+
+[Actividad resuelta de subredes](/posts/actividad-resuelta-subredes).
+
+{:.question}
 ## Actividad
 
 Si tenemos una red de tipo C 194.168.100.0:
