link a actividad subredes

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -35,7 +35,7 @@ pin: true
 ## Evaluación 2
 
 - UD09 - [Enrutamiento: estático y dinámico](/posts/enrutamiento/)
-- UD10 - [Subredes](/posts/subredes/)
+- UD10 - [Subredes](/posts/subredes/) y [Actividad resuelta de subredes](https://marcosruiz.github.io/posts/actividad-resuelta-subredes/)
 - UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
 - UD12 - [¿Qué son las VLAN?](/posts/vlan/)
 
