--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -107,6 +107,12 @@ La empresa X necesita crear 25 redes, el proveedor de Internet le dio la IP 192.
 
 ## Videos de refuerzo
 
+El mejor video explicativo...
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lEKR7WtKzDA" title="YouTube video player" frameborder="0" allow="accelerometer; autopAlay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SHbBso63X38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <iframe src="https://www.youtube.com/embed/vPYP9MNeZpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe src="https://www.youtube.com/embed/rg8RwcQyPfs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
