--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -124,3 +124,4 @@ El mejor video explicativo...
 - [Subnet Zero and the All-Ones Subnet](https://www.cisco.com/c/en/us/support/docs/ip/dynamic-address-allocation-resolution/13711-40.html)
 - [¿Qué son las subredes?](https://docs.oracle.com/cd/E19957-01/820-2981/ipconfig-31/index.html)
 - [Subnetwork (Wikipedia)](https://en.wikipedia.org/wiki/Subnetwork#cite_note-6)
+- [Calculadora de subred para IPV4](https://www.site24x7.com/es/tools/ipv4-subredes-calculadora.html)
