--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -76,7 +76,7 @@ La carpeta compartida de la asignatura es `\\ORDAI1PROF\Compartida_RL_22_23`.
 
 El usuario es "alumno" y la contraseña es "alumno".
 
-## Enlaces increibles 🔥
+## Enlaces increíbles 🔥
 
 - [CCNA Desde Cero](https://ccnadesdecero.com/)
 - [NASeros (YouTube)](https://www.youtube.com/c/Naseros)
