falta colocar en algún sitio dmz y tcpwrapper

--- a/_posts/2022-01-27-vpn.md
+++ b/_posts/2022-01-27-vpn.md
@@ -14,6 +14,9 @@ Ejemplos comunes son la posibilidad de conectar dos o más sucursales de una emp
 
 La conexión VPN a través de Internet es técnicamente una unión wide area network (WAN) entre los sitios, pero al usuario le parece como si fuera un enlace privado: de allí la designación virtual private network.
 
+{:.question}
+¿Qué es una VPN?
+
 {:.section}
 ## Características básicas de la seguridad de una VPN
 
@@ -26,6 +29,9 @@ Para hacerlo posible de manera segura es necesario proporcionar los medios para 
 - **Control de acceso**: se trata de asegurar que los participantes autentificados tienen acceso únicamente a los datos a los que están autorizados.
 - **Auditoría y registro de actividades**: se trata de asegurar el correcto funcionamiento y la capacidad de recuperación.
 - **Calidad del servicio**: se trata de asegurar un buen rendimiento, que no haya una degradación poco aceptable en la velocidad de transmisión.
+
+{:.question}
+¿Qué ventajas aporta una VPN?
 
 {:.section}
 ## Tipos de VPN
@@ -41,6 +47,9 @@ Es quizás el modelo más usado actualmente, y consiste en usuarios que se conec
 ### VPN punto a punto
 
 Este esquema se utiliza para conectar oficinas remotas con la sede central de la organización. El servidor VPN, que posee un vínculo permanente a Internet, acepta las conexiones vía Internet provenientes de los sitios y establece el túnel VPN. Los servidores de las sucursales se conectan a Internet utilizando los servicios de su proveedor local de Internet, típicamente mediante conexiones de banda ancha. Esto permite eliminar los costosos vínculos punto a punto tradicionales (realizados comúnmente mediante conexiones de cable físicas entre los nodos), sobre todo en las comunicaciones internacionales. Es más común el siguiente punto, también llamado tecnología de túnel o tunneling.
+
+{:.question}
+En el contexto de VPN ¿Qué dos tipos de topologias existen principalemente?
 
 {:.question}
 ¿Qué diferencia hay entre VPN de acceso remoto y VPN punto a punto?
