parte de john the ripper hecha.

--- a/_posts/2022-12-21-acl.md
+++ b/_posts/2022-12-21-acl.md
@@ -36,6 +36,9 @@ Las ACL son representaciones de permisos para elementos del sistema de archivos,
 {:.question}
 ¿Son compatibles el sistema de permisos nativos con las ACL?
 
+{:.question}
+¿Qué ventajas/desventajas tienen las ACL sobre los permisos tradicionales?
+
 ## Bibliografía
 
 - [ACL: Access Control Lists y los permisos en GNU/Linux](https://juncotic.com/acl-access-control-lists-y-los-permisos-en-gnu-linux/)
