--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -42,7 +42,7 @@ img_path: /assets/img/redes-locales-22-23/
 
 ### Prácticas (SMR2)
 
-- P08 - [Práctica: Subredes sin enrutamiento en Packet Tracer(/posts/practica-packet-tracer-red-estatica/)
+- P08 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
 
 - P09 - [Práctica: Enrutamiento con Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
 - P10 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
