--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -40,12 +40,15 @@ img_path: /assets/img/redes-locales-22-23/
 - UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
 - UD12 - [¿Qué son las VLAN?](/posts/vlan/)
 
+### Prácticas (SMR1)
+
+- P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
+
 ### Prácticas (SMR2)
 
-- P08 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
-
-- P09 - [Práctica: Enrutamiento con Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
-- P10 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
+- P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
+- P08 - [Práctica: Enrutamiento con Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
+- P09 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
 
 ## Evaluación 3
 
