--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -69,10 +69,17 @@ img_path: /assets/img/redes-locales-22-23/
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iNh-62Mf0O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4-ai8jlzcVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Por qué redes es tan difícil?</summary>
+  <div class="card-body" markdown="1">
 
 ![Es tan difícil](memeCrying.jpg)
-_Es tan difícil_
 
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Carpeta compartida de la asignatura
 
