--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -43,11 +43,12 @@ img_path: /assets/img/redes-locales-22-23/
 ### Prácticas (SMR1)
 
 - P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
+- P08 - [Práctica: Subredes con enrutamiento en Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
 
 ### Prácticas (SMR2)
 
 - P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
-- P08 - [Práctica: Enrutamiento con Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
+- P08 - [Práctica: Enrutamiento con subredes en Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
 - P09 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
 
 ## Evaluación 3
