--- a/_posts/2023-01-22-nmap.md
+++ b/_posts/2023-01-22-nmap.md
@@ -1,4 +1,4 @@
----
+l---
 title: "Tutorial: Nmap"
 date: 2023-01-01 9:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Seguridad Informática]
@@ -67,6 +67,12 @@ está bloqueando el intento de conexión (router, firewall).
 cerrado.
 
 Para averiguar la información del sistema operativo podemos usar la opción `-O`.
+
+Escaneo TCP Connect (fiable, pero ruidoso):
+
+```console
+#nmap -sT -O -v <dirección IP objetivo>
+```
 
 ## Más información
 
