--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -622,6 +622,10 @@ Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
 - [Lenguaje CSS](https://lenguajecss.com/css/)
 - [CSS Tutorial (W3Schools)](https://www.w3schools.com/css/default.asp)
 
+## Chuleta de CSS
+
+Puedes descargar la chuleta en español [aquí](/assets/img/css/css3-cheatsheet-emezeta).
+
 ## Bibliografía
 
 - [CSS Battle](https://cssbattle.dev/)
