links arreglados de verdad

--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -624,7 +624,7 @@ Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
 
 ## Chuleta de CSS
 
-Puedes descargar la chuleta en español [aquí](/assets/img/css/css3-cheatsheet-emezeta).
+Puedes descargar la chuleta en español [aquí](/assets/img/css/css3-cheatsheet-emezeta.pdf).
 
 ## Bibliografía
 
