Añado pregunta a la práctica

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -21,7 +21,7 @@ img_path: /assets/img/redes-locales-22-23/
 - UD04 - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
 - UD05 - [Capa física](/posts/capa-fisica/)
 - UD06 - [Capa de enlace](/posts/capa-enlace/)
-- UD07 - [Capa de red](/posts/capa-red/)
+- UD07 - [Capa de red](/posts/capa-red/) ➡ Incluye [Direcciones IPv4](/posts/direcciones-ipv4/)
 - UD08 - [Dispositivos de interconexión](/posts/dispositivos-especificos-de-la-red-local/)
 
 - P01 - Práctica: Binario (en papel) ➡ Entrega en papel
@@ -35,6 +35,9 @@ img_path: /assets/img/redes-locales-22-23/
 
 ## Evaluación 2
 
+> Si no has aprobado la 1ª evaluación lo más importante para la 2ª son los siguientes artículos [Direcciones IPv4](/posts/direcciones-ipv4/) y [Dispositivos de interconexión](/posts/dispositivos-especificos-de-la-red-local/)
+{:.prompt-tip}
+
 - UD09 - [Enrutamiento: estático y dinámico](/posts/enrutamiento/)
 - UD10 - [Subredes](/posts/subredes/)
 - UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
@@ -44,6 +47,9 @@ img_path: /assets/img/redes-locales-22-23/
 
 - P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
 - P08 - [Práctica: Subredes con enrutamiento en Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
+- [Práctica: WLAN con Packet Tracer](/posts/practica-wlan-packet-tracer/)
+- [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
+
 
 ### Prácticas (SMR2)
 
