redes inalámbricas apañado

--- a/_posts/2023-01-22-nmap.md
+++ b/_posts/2023-01-22-nmap.md
@@ -1,4 +1,4 @@
-l---
+---
 title: "Tutorial: Nmap"
 date: 2023-01-01 9:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Seguridad Informática]
@@ -8,9 +8,9 @@ img_path: /assets/img/tutorial-nmap/
 
 ## ¿Qué es nmap?
 
-NMAP (de Network Mapped) es una **herramienta de escaneo de redes y detección de hosts, cuyo funcionamiento se basa en el uso del protocolo TCP dela capa de Transporte** (se basa en el envío de un tipo de paquetes definidos por la aplicación a otros equipos, con los que recopila información y posteriormente analiza sus respuestas). Básicamente NMAP permite obtener información valiosa sobre los equipos de una red TCP/IP. Alguno de los típicos usos de esta herramienta es averiguar qué servicios de red (HTTP, FTP, SSH, etc.) se están ejecutando en un ordenador, el sistema operativo de cualquier dispositivo, descubrir los equipos conectados a la misma red que el auditor, detectar proxys, firewalls, etc…
+NMAP (de Network Mapped) es una **herramienta de escaneo de redes y detección de hosts, cuyo funcionamiento se basa en el uso del protocolo TCP dela capa de Transporte** (se basa en el envío de un tipo de paquetes definidos por la aplicación a otros equipos, con los que recopila información y posteriormente analiza sus respuestas). Básicamente NMAP permite obtener información valiosa sobre los equipos de una red TCP/IP. Alguno de los típicos usos de esta herramienta es averiguar qué servicios de red (HTTP, FTP, SSH, etc.) se están ejecutando en un ordenador, el sistema operativo de cualquier dispositivo, descubrir los equipos conectados a la misma red que el auditor, detectar proxys, firewalls, etc.
 
-En algunos casos, también se usa en pruebas de pentesting en redes, y no se limita a la mera recopilación y enumeración de información, sino que también es una potente utilidad que puede utilizarse como detector de vulnerabilidades o como escáner de seguridad. 
+En algunos casos, también se usa en pruebas de pentesting en redes, y no se limita a la mera recopilación y enumeración de información, sino que también es una potente utilidad que puede utilizarse como detector de vulnerabilidades o como escáner de seguridad.
 
 En resumen, NMAP es una herramienta fundamental en el análisis de la seguridad en redes, ya que permite obtener información muy valiosa para analizar cómo de expuesto está un equipo en una red.Esta utilidad de redes se suele utilizar para:
 
