--- a/_posts/2022-01-27-vpn.md
+++ b/_posts/2022-01-27-vpn.md
@@ -1,12 +1,12 @@
 ---
-title: "VPN"
+title: "¿Qué es una VPN?"
 date: 2022-01-27 01:20:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Seguridad Informática]
 tags: [gnu linux, comandos, terminal, bash, seguridad informática, smr, seguridad activa, teoría, vpn, redes locales]
 ---
 
 {:.section}
-## ¿Qué es una VPN?
+## Introducción
 
 Una red privada virtual (en inglés, Virtual Private Network, VPN) es una tecnología de red de ordenadores que permite una extensión segura de la red de área local (LAN) sobre una red pública o no controlada como Internet. Permite que el ordenador en la red envíe y reciba datos sobre redes compartidas o públicas como si fuera una red privada, con toda la funcionalidad, seguridad y políticas de gestión de una red privada. Esto se realiza estableciendo una conexión virtual punto a punto mediante el uso de conexiones dedicadas, cifrado o la combinación de ambos métodos.
 
