organizo el tema de vpn

--- a/_posts/2022-01-27-vpn.md
+++ b/_posts/2022-01-27-vpn.md
@@ -10,12 +10,39 @@ tags: [gnu linux, comandos, terminal, bash, seguridad informática, smr, segurid
 
 Una red privada virtual (en inglés, Virtual Private Network, VPN) es una tecnología de red de ordenadores que permite una extensión segura de la red de área local (LAN) sobre una red pública o no controlada como Internet. Permite que el ordenador en la red envíe y reciba datos sobre redes compartidas o públicas como si fuera una red privada, con toda la funcionalidad, seguridad y políticas de gestión de una red privada. Esto se realiza estableciendo una conexión virtual punto a punto mediante el uso de conexiones dedicadas, cifrado o la combinación de ambos métodos.
 
+{:.question}
+¿Qué significan las siglas VPN?
+
+{:.question}
+¿Qué es una VPN?
+
 Ejemplos comunes son la posibilidad de conectar dos o más sucursales de una empresa utilizando como vínculo Internet, permitir a los miembros del equipo de soporte técnico la conexión desde su casa al centro de cómputo o bien que un usuario pueda acceder a su equipo doméstico desde un sitio remoto, como por ejemplo un hotel. Todo ello utilizando la infraestructura de Internet.
 
 La conexión VPN a través de Internet es técnicamente una unión wide area network (WAN) entre los sitios, pero al usuario le parece como si fuera un enlace privado: de allí la designación virtual private network.
 
 {:.question}
-¿Qué es una VPN?
+¿Una VPN es una LAN física, LAN lógica, una WAN física o una WAN lógica?
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencia hay entre un proxie y una VPN?</summary>
+  <div class="card-body" markdown="1">
+
+En el artículo [Seguridad activa de control de redes](/posts/seguridad-activa-control-redes/) se explican sus similitudes y diferencias.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2Dao6N0jWEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Preguntas:
+
+1. ¿Cuál es el principal uso de una VPN a nivel profesional?
+2. ¿Todo el mundo que teletrabaja requiere una VPN?
+3. ¿Es recomendable usar una VPN si estamos usando una red de un aeropuerto?
+4. ¿Se puede evitar la censura de páginas web que visitamos usando una VPN?
+5. ¿Se puede usar una VPN para acceder a contenido (de Netflix, por ejemplo) que solo esta disponible en otro país?
+6. ¿Cuál es la principal desventaja de usar una VPN?
 
 {:.section}
 ## Características básicas de la seguridad de una VPN
@@ -31,12 +58,28 @@ Para hacerlo posible de manera segura es necesario proporcionar los medios para 
 - **Calidad del servicio**: se trata de asegurar un buen rendimiento, que no haya una degradación poco aceptable en la velocidad de transmisión.
 
 {:.question}
-¿Qué ventajas aporta una VPN?
+¿Cómo se asegura en una VPN la integridad?
+
+{:.question}
+¿Cómo se asegura en una VPN la confidencialidad?
+
+{:.question}
+¿Cómo se asegura en una VPN el no repudio?
+
+{:.question}
+¿Qué ventajas/desventajas aporta una VPN?
 
 {:.section}
 ## Tipos de VPN
 
-Básicamente existen cuatro arquitecturas de conexión VPN: 
+Básicamente existen 2 + 1 arquitecturas de conexión VPN:
+
+1. VPN de acceso remoto
+2. VPN punto a punto
+3. VPN over LAN
+
+{:.question}
+¿Qué tres tipos de VPN existen?
 
 {:.subsection}
 ### VPN de acceso remoto
@@ -54,8 +97,8 @@ En el contexto de VPN ¿Qué dos tipos de topologias existen principalemente?
 {:.question}
 ¿Qué diferencia hay entre VPN de acceso remoto y VPN punto a punto?
 
-{:.subsection}
-### Tunneling
+{:.subsubsection}
+#### Tunneling
 
 La técnica de tunneling consiste en encapsular un protocolo de red sobre otro (protocolo de red encapsulador) creando un túnel dentro de una red de computadoras. El establecimiento de dicho túnel se implementa incluyendo una PDU (unidades de datos de protocolo) determinada dentro de otra PDU con el objetivo de transmitirla desde un extremo al otro del túnel sin que sea necesaria una interpretación intermedia de la PDU encapsulada. De esta manera se encaminan los paquetes de datos sobre nodos intermedios que son incapaces de ver en claro el contenido de dichos paquetes. El túnel queda definido por los puntos extremos y el protocolo de comunicación empleado, que entre otros, podría ser SSH.
 
@@ -68,7 +111,66 @@ Este esquema es el menos difundido pero uno de los más poderosos para utilizar 
 
 Un ejemplo clásico es un servidor con información sensible, como las nóminas de sueldos, ubicado detrás de un equipo VPN, el cual provee autenticación adicional más el agregado del cifrado, haciendo posible que solamente el personal de recursos humanos habilitado pueda acceder a la información.
 
-Otro ejemplo es la conexión a redes Wi-Fi haciendo uso de túneles cifrados IPSec o SSL que además de pasar por los métodos de autenticación tradicionales (WEP, WPA, direcciones MAC, etc.) agregan las credenciales de seguridad del túnel VPN creado en la LAN interna o externa. 
+Otro ejemplo es la conexión a redes Wi-Fi haciendo uso de túneles cifrados IPSec o SSL que además de pasar por los métodos de autenticación tradicionales (WEP, WPA, direcciones MAC, etc.) agregan las credenciales de seguridad del túnel VPN creado en la LAN interna o externa.
+
+{:.section}
+## Protocolos para VPNs
+
+Existen muchos protocolos para VPNs pero solo vamos a explicar tres:
+
+1. OpenVPN
+2. Wireguard
+3. IKEv2/IPSec
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1ISXmbcZAm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Preguntas sobre el vídeo:
+
+1. ¿Qué protocolos VPN existen en el mercado?
+2. ¿Cuál es el protocolo VPN más popular?
+3. De todas las opciones VPN del mercado (ExpressVPN, Surfshark, NordVPN, CyberGhost, ProtonVPN, Windscribe, IPVanish, Mullvad, Hide.me, TunnelBear, etc.) ¿que protocolos usa cada una de ellas?
+
+{:.subsection}
+### OpenVPN
+
+OpenVPN es el protocolo VPN más popular y utilizado, tanto a nivel doméstico como también profesional (en pequeñas y medianas empresas). OpenVPN es de código abierto y multiplataforma (está disponible para Windows, Linux, Mac, Android, iOS y Unix), se ha convertido en uno de los protocolos VPN más importantes que tenemos actualmente, además, es uno de los más seguros.
+
+> En general, OpenVPN es el protocolo que deberías utilizar. Se trata de la opción más completa; ofrece el equilibrio perfecto entre velocidad, seguridad y fiabilidad - la mayoría de servicios VPN lo usan por defecto.
+{:.prompt-tip}
+
+{:.subsection}
+### Wireward
+
+Este protocolo de VPN es el más nuevo de todos, uno de los más seguros y el más rápido que hemos probado en RedesZone. WireGuard es un protocolo de código abierto y multiplataforma, es compatible con todos los sistemas operativos, además, es mucho más fácil de configurar que otras VPN como OpenVPN. Una de las principales características de WireGuard, es que está integrado en el Kernel de Linux, por lo que la velocidad estará garantizada. WireGuard utiliza siempre los mejores cifrados asimétricos y simétricos que existen, no hay opción a modificar este tipo de cifrado por unos menos seguros, tenemos seguridad por defecto.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué protocolo es más seguro: OpenVPN  Wireward?</summary>
+  <div class="card-body" markdown="1">
+
+A nivel de seguridad no hay ninguno por encima del otro.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+{:.subsection}
+### IKEv2/IPSec
+
+El protocolo IKEv2 (Internet Key Exchange V2) es un protocolo de intercambio de claves seguro, se utiliza habitualmente junto con el protocolo IPsec, por tanto, siempre lo veremos como IPsec IKEv2 en los diferentes sistemas operativos y servidores. Las principales características de IKEv2 son que es mucho más rápido que otros protocolos a la hora de conectarse, tiene soporte nativo en Windows 10, iOS y también en algunos Android como los smartphones de Samsung. **IKEv2 es un protocolo muy recomendable para smartphones**, porque la reconexión es realmente rápida cuando cambiamos de red.
+
+{:.section}
+## Instalación de un cliente VPN
+
+El objetivo final de la VPN es que el empleado (más bien, su ordenador) no note si está en la empresa o fuera de ella. En ambos casos recibe una configuración IP privada (direcciones 10.X.X.X, por ejemplo), por lo que no necesita cambiar nada en la configuración de sus aplicaciones (correo, intranet, etc.).
+
+El responsable de conseguir esta transparencia es el software de la VPN. En el ordenador del empleado hay que instalar un software cliente VPN. Este software instala un driver de red, de manera que para el sistema operativo es una tarjeta más. Ese driver se encarga de contactar con una máquina de la empresa, donde ejecuta un software servidor VPN que gestiona la conexión, para introducir los paquetes en la LAN. La gestión consiste en:
+
+- **Autentificar al cliente VPN**. No podemos dejar que entre cualquiera, por lo que se utiliza el típico usuario/contraseña, tarjetas inteligentes, etc.
+- **Establecer un túnel** a través de Internet. El driver de la VPN en el cliente le ofrece una dirección privada de la LAN de la empresa (la 10.0.1.45, por ejemplo), pero cualquier paquete que intente salir por esa tarjeta es encapsulado dentro de otro paquete. Este segundo paquete viaja por Internet desde la IP pública del empleado hasta la IP pública del servidor VPN en la empresa. Una vez allí, se extrae el paquete y se inyecta en la LAN. Para que alguien de la LAN envíe un paquete a la 10.0.1.45 el proceso es similar.
+- **Proteger el túnel**. Como estamos atravesando Internet, hay que encriptar las comunicaciones (sobre todo si somos una empresa). Los paquetes encapsulados irán cifrados.
+- **Liberar el túnel**. El cliente o el servidor pueden interrumpir la conexión cuando lo consideren necesario.
+
+El software VPN en el cliente suele llevar una opción para que las conexiones a Internet se hagan directamente en la conexión del usuario, sin tener que pasar por el túnel y salir por la conexión a Internet de la empresa. Es decir, el túnel se usa solo para comunicaciones internas.
 
 ## Bibliografía
 
