--- a/_posts/2022-01-27-vpn.md
+++ b/_posts/2022-01-27-vpn.md
@@ -139,12 +139,12 @@ OpenVPN es el protocolo VPN más popular y utilizado, tanto a nivel doméstico c
 {:.prompt-tip}
 
 {:.subsection}
-### Wireward
+### WireGuard
 
-Este protocolo de VPN es el más nuevo de todos, uno de los más seguros y el más rápido que hemos probado en RedesZone. WireGuard es un protocolo de código abierto y multiplataforma, es compatible con todos los sistemas operativos, además, es mucho más fácil de configurar que otras VPN como OpenVPN. Una de las principales características de WireGuard, es que está integrado en el Kernel de Linux, por lo que la velocidad estará garantizada. WireGuard utiliza siempre los mejores cifrados asimétricos y simétricos que existen, no hay opción a modificar este tipo de cifrado por unos menos seguros, tenemos seguridad por defecto.
+Este protocolo de VPN es el más nuevo de todos, uno de los más seguros y más rápidos. WireGuard es un protocolo de código abierto y multiplataforma, es compatible con todos los sistemas operativos, además, es mucho más fácil de configurar que otras VPN como OpenVPN. Una de las principales características de WireGuard, es que está integrado en el Kernel de Linux, por lo que la velocidad estará garantizada. WireGuard utiliza siempre los mejores cifrados asimétricos y simétricos que existen, no hay opción a modificar este tipo de cifrado por unos menos seguros, tenemos seguridad por defecto.
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué protocolo es más seguro: OpenVPN  Wireward?</summary>
+  <summary class="card-header question">¿Qué protocolo es más seguro: OpenVPN o Wireward?</summary>
   <div class="card-body" markdown="1">
 
 A nivel de seguridad no hay ninguno por encima del otro.
@@ -175,3 +175,5 @@ El software VPN en el cliente suele llevar una opción para que las conexiones a
 ## Bibliografía
 
 - [Red privada virtual (Wikipedia)](https://es.wikipedia.org/wiki/Red_privada_virtual)
+- [Cuál es el protocolo VPN más seguro: Conoce todos los que existen](https://www.redeszone.net/tutoriales/vpn/protocolo-vpn-mas-seguro/)
+- [¿Qué protocolo VPN debería usar? Guía rápida para 2023](https://es.vpnmentor.com/blog/que-protocolo-vpn-deberia-utilizar/)
