--- a/_posts/2023-01-22-nmap.md
+++ b/_posts/2023-01-22-nmap.md
@@ -20,12 +20,34 @@ En resumen, NMAP es una herramienta fundamental en el análisis de la seguridad 
 - Detectar el sistema operativo, la dirección hardware y la versión de software de los equipos de una red.
 - Detección de vulnerabilidades y agujeros de seguridad (mediante scripts Nmap).
 
-En Sistemas operativos específicos del campo de la seguridad informática como Kali Linux oParrot Security, Nmap está preinstalada, pero también puede instalarse de manera manual en cualquier otra distribución de Linux (y también en Windows). Se puede usar mediante CLI o mediante GUI (mediante la herramienta Zenmap para Windows).
+<details class="card mb-2">
+  <summary class="card-header question">¿La herramienta nmap viene preinstalada en Kali Linux? ¿Esta disponible la herramienta nmap para Windows?</summary>
+  <div class="card-body" markdown="1">
+
+En sistemas operativos específicos del campo de la seguridad informática como Kali Linux o Parrot Security, Nmap está preinstalada, pero también puede instalarse de manera manual en cualquier otra distribución de Linux (y también en Windows). Se puede usar mediante CLI o mediante GUI (mediante la herramienta Zenmap para Windows).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
-¿Qué es NSE (Nmap Scripting Engine)?
+¿Conoces alguna distribución similar a Kali Linux?
 
-## Uso de nmap
+<details class="card mb-2">
+  <summary class="card-header question">(Opcional) ¿Qué es NSE (Nmap Scripting Engine)?</summary>
+  <div class="card-body" markdown="1">
+
+NMAP por sí sola ya es una herramienta bastante potente (como veremos tiene una amplia variedad de opciones). Sin embargo, tiene una “ampliación” conocida como NSE, que no es más que una forma avanzada de utilizar nmap, para añadirle más potencia; las funcionalidades que añade el NSE permiten que Nmap pueda ejecutar tareas adicionales al mero escaneo de puertos, identificación de servicios, sistemas operativos y versiones.  
+
+El NSE consiste en la posibilidad de utilizar diferentes scripts específicos, en las diferentes fases de un Pentest. De acuerdo al libro de Nmap Network Scanning, NSE fue desarrollado con el fin de mejorar el descubrimiento de redes, sistema de detección de versiones más sofisticado, detección de vulnerabilidades, detección de puertas traseras (backdoor) y explotación de vulnerabilidades.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CTmLLHGbvPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+## Escanéos básicos con nmap
 
 Para buscar equipos en una red podemos utilizar el siguiente comando:
 
@@ -33,16 +55,28 @@ Para buscar equipos en una red podemos utilizar el siguiente comando:
 #nmap –sP <red>/<máscara de red en formato prefijo>
 ```
 
+La opción `s` significa scan y la opción `P` significa ping.
+
 Por ejemplo si queremos escanear la red de tipo C 192.168.1.0 ejecutaremos:
 
 ```console
 #nmap –sP 192.168.1.0/24
 ```
 
+También podemos especificar un rango:
+
+```console
+#nmap –sP 192.168.1.1-50
+```
+
 {:.question}
 ¿Qué información obtienes con la opción `-sP`?
 
-Podemos redirigir la salida con la opción `-oN <nombre de fichero>`.
+Podemos redirigir la salida con la opción `-oN <nombre de fichero>`. Por ejemplo:
+
+```console
+#nmap –sP 192.168.1.0/24 -oN salida.txt
+```
 
 Una vez hemos encontrado equipos en nuestra red analizamos uno a uno con:
 
@@ -56,6 +90,12 @@ Como por ejemplo:
 #nmap 192.168.1.3
 ```
 
+{:.question}
+¿Qué información obtienes interrogando directamente al equipo?
+
+{:.question}
+¿Consideras que es útil esta información?
+
 Para cada puerto, la herramienta ofrece cuatro posibles estados:
 
 - **open (abierto)**: la máquina acepta paquetes dirigidos a ese puerto, donde algún servidor
@@ -66,6 +106,12 @@ está bloqueando el intento de conexión (router, firewall).
 - **unfiltered**: el puerto no está bloqueado, pero no se puede concluir si está abierto o
 cerrado.
 
+Con el atributo `–T`, puedes elegir realizar un escaneo de menor a más “agresivo”, y puede tomar valores entre 0 y 5, siendo 5 el más agresivo y el más rápido. Por ejemplo:
+
+```console
+#nmap -T4 192.168.1.3
+```
+
 Para averiguar la información del sistema operativo podemos usar la opción `-O`.
 
 Escaneo TCP Connect (fiable, pero ruidoso):
@@ -74,11 +120,28 @@ Escaneo TCP Connect (fiable, pero ruidoso):
 #nmap -sT -O -v <dirección IP objetivo>
 ```
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/har1It-lW2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6-E6b1CX1Cc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## Escaneos de puertos con nmap
+
+Para realizar un análisis de puertos abiertos típico (TCP SYN Scanner). Por ejemplo:
+
+```console
+# nmap –sS 192.168.10.1
+```
+
+Para detectar de la versión de los servicios instalados en el objetivo. Por ejemplo:
+
+```console
+# nmap -sV 192.168.10.1
+```
+
+
 ## Más información
 
 Leer artículo [Realiza escaneos de puertos con Nmap a cualquier servidor o sistema](https://www.redeszone.net/tutoriales/configuracion-puertos/nmap-escanear-puertos-comandos/).
 
 ![Chuleta Nmap](nmapCheatSheet.jpg)
 _Chuleta Nmap en inglés_
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/har1It-lW2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
