--- a/_posts/2022-02-08-vlan.md
+++ b/_posts/2022-02-08-vlan.md
@@ -15,6 +15,8 @@ Una VLAN es un método que crea una red lógica dentro de una red física. De es
 ![Segmentación LAN tradicional vs segmentación VLAN](/assets/img/vlan/segmentacionLanVsSegmentacionVlan.png)
 _Segmentación LAN tradicional vs segmentación VLAN_
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/n8j9UcDsV2g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 {:.section}
 ## Características de las VLAN
 
@@ -22,9 +24,9 @@ Las principales características de la VLAN son:
 
 - Crear una **topología virtual independiente** de la topología física.
 - Permiten **agrupar a los usuarios** en grupos de trabajo flexibles, que se pueden modificar simplemente gestionándolos a través de la interfaz de configuración del conmutador (switch). 
-- Funcionan los **niveles 2 y 3 del modelo OSI**. 
+- Funcionan los **niveles 2 y 3 del modelo OSI**.
 - La **comunicación entre VLAN requiere** enrutamiento de capa 3, que es realizado por **un router**.
-- Permite **controlar el tamaño de los dominios la difusión (broadcast)**. Cada VLAN define un dominio de difusión diferente. 
+- Permite **controlar el tamaño de los dominios la difusión (broadcast)**. Cada VLAN define un dominio de difusión diferente.
 - **Necesita administración**, que suele llevarse a cabo mediante el administrador de la red. 
 - **Pueden aumentar la seguridad** de la red. El hecho de separar la red en grupos que no puedan compartir información entre sí supone una mejora en la seguridad.
 
@@ -47,9 +49,9 @@ La infraestructura de VLAN está distribuida entre varios conmutadores (switches
 La información sobre las VLAN definidas y sobre la pertenencia de cada uno de los usuarios a las distintas VLAN se distribuye a través del backbone entre los distintos conmutadores y funciona de esta manera:
 
 - Cada VLAN tiene un identificador.
-- Las tramas procedentes de los usuarios se etiquetan con el identificador correspondiente a la VLAN a la que pertenecen. 
+- Las tramas procedentes de los usuarios se etiquetan con el identificador correspondiente a la VLAN a la que pertenecen.
 - El etiquetado se lleva a cabo en el switch (capa 2 del modelo OSI).
-- Las tramas etiquetadas atraviesan el backbone. 
+- Las tramas etiquetadas atraviesan el backbone.
 - Cuando una trama etiquetado abandona el backbone, el conmutador elimina el identificador.
 
 ![Switches y VLAN](/assets/img/vlan/switchesYVlan.png)
@@ -76,9 +78,9 @@ _Hubs y VLAN_
 {:.section}
 ## Asignación de usuarios en VLAN
 
-En principio, **la configuración VLAN cambia dependiendo del fabricante**. La asignación de los usuarios puede ser de dos maneras: 
+En principio, **la configuración VLAN cambia dependiendo del fabricante**. La asignación de los usuarios puede ser de dos maneras:
 
-- Estática 
+- Estática
 - Dinámica
 
 {:.subsection}
@@ -101,6 +103,16 @@ La pertenencia a una VLAN puede depender de tres factores:
 El procedimiento es el siguiente:
 
 - Se necesita un servidor de configuración VLAN – que se debe mantener, pues supone un punto más de fallo.
-- Al conectar un usuario a un puerto el switch consulta al servidor de configuración a qué VLAN pertenece. 
-- Cuando se realizan cambios en la ubicación física del puesto de trabajo de los usuarios no es necesario la intervención del administrador de la red, ya que los desplazamientos físicos entre los puertos de los switches se detectan automáticamente. 
+- Al conectar un usuario a un puerto el switch consulta al servidor de configuración a qué VLAN pertenece.
+- Cuando se realizan cambios en la ubicación física del puesto de trabajo de los usuarios no es necesario la intervención del administrador de la red, ya que los desplazamientos físicos entre los puertos de los switches se detectan automáticamente.
 - Ofrece mayor seguridad ya que se notifica si usuarios no autorizados acceden a la red.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es un enlace troncal?</summary>
+  <div class="card-body" markdown="1">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rsaAiaAKCsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
