--- a/_posts/2022-02-08-vlan.md
+++ b/_posts/2022-02-08-vlan.md
@@ -17,6 +17,16 @@ _Segmentación LAN tradicional vs segmentación VLAN_
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n8j9UcDsV2g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué es una VLAN?</summary>
+  <div class="card-body" markdown="1">
+
+Una VLAN, acrónimo de virtual LAN (red de área local virtual), es un método para crear redes logicas independientes dentro de una misma red fisica. Varias VLAN pueden coexistir en un único switch físico o en una única red física. Son útiles para reducir el dominio de difusión y ayudan en la administración de la red, separando segmentos lógicos de una red de área local (los departamentos de una empresa, por ejemplo) que no deberian intercambiar datos usando la red local (aunque podrían hacerlo a través de un enrutador o un conmutador de capa OSI 3y 4).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 {:.section}
 ## Características de las VLAN
 
@@ -32,9 +42,9 @@ Las principales características de la VLAN son:
 
 Otras características son:
 
-- **Aumento de la eficiencia del ancho de banda**: La cantidad paquetes que circula por la red es menor, así que el uso del ancho de banda es más eficiente. 
-- **Aumento de la flexibilidad de la red**: Varios hosts conectados al mismo conmutador puedan pertenecer a distintas VLAN, y también hosts de distintos conmutadores pueden pertenecer a la misma VLAN. 
-- **Aumento de la escalabilidad de la red**: Es más fácil aumentar una red previamente segmentada da sus ventajas en ancho de banda seguridad y flexibilidad. 
+- **Aumento de la eficiencia del ancho de banda**: La cantidad paquetes que circula por la red es menor, así que el uso del ancho de banda es más eficiente.
+- **Aumento de la flexibilidad de la red**: Varios hosts conectados al mismo conmutador puedan pertenecer a distintas VLAN, y también hosts de distintos conmutadores pueden pertenecer a la misma VLAN.
+- **Aumento de la escalabilidad de la red**: Es más fácil aumentar una red previamente segmentada da sus ventajas en ancho de banda seguridad y flexibilidad.
 
 {:.section}
 ## Formas de VLAN
