--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -41,8 +41,8 @@ img_path: /assets/img/redes-locales-22-23/
 
 - P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
 - P08 - [Práctica: Subredes con enrutamiento en Packet Tracer](/posts/practica-enrutamiento-con-packet-tracer/)
-- P09 - [Práctica: WLAN con Packet Tracer](/posts/practica-wlan-packet-tracer/)
-- P10 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer/)
+- P09 - [Práctica: WLAN en Packet Tracer](/posts/practica-wlan-packet-tracer/)
+- P10 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
 
 ## Evaluación 3
 
@@ -53,6 +53,8 @@ img_path: /assets/img/redes-locales-22-23/
 - UD17 - Resolución de conflictos en una red local.
 - UD18 - Protección, vigilancia y soporte de redes.
 
+- P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
+- [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
 - [Práctica: Servicio DHCP, DNS, HTTP y PAT en Packet Tracer](/posts/practica-servicio-dhcp-dns-http-pat-packet-tracer/)
 
 ## Videos para poner en bucle 🔁
