primera vesión de nat y transporte

--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -7,6 +7,13 @@ img_path: /assets/img/nat/
 ---
 
 {:.section}
+## Introducción
+
+Antes de nada es recomendable volver a ver este vídeo introductorio:
+
+<iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+{:.section}
 ## Características de un NAT
 
 Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una dirección única a cada dispositivo conectado a Internet. Las redes suelen implementarse mediante el uso de direcciones IPv4 privadas, según se definen en RFC 1918. El rango de direcciones incluido en RFC 1918 se incluye en la siguiente tabla. Es muy probable que la computadora que utilizas tenga asignada una dirección privada.
@@ -192,8 +199,6 @@ Para la dirección de origen, el R2 traduce la dirección local interna a una di
 {:.question}
 ¿Un router con PAT convierte a un router en un dispositivo de capa 4?
 
-<iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 {:.subsubsection}
 #### Configurar PAT
 
@@ -206,7 +211,7 @@ Para configurar una NAT estática puedes seguir los pasos del artículo [PAT](ht
 
 En el ejemplo anterior, los números de puerto del cliente, 1331 y 1555, no se modificaron en el router con NAT habilitada. Esta no es una situación muy probable, porque existe una gran posibilidad de que estos números de puerto ya se hayan conectado a otras sesiones activas.
 
-PAT intenta conservar el puerto de origen inicial. Sin embargo, si el puerto de origen original ya está en uso, PAT asigna el primer número de puerto disponible a partir del comienzo del grupo de puertos apropiado 0-511, 512-1,023 o 1,024-65,535.
+PAT intenta conservar el puerto de origen inicial. Sin embargo, si el puerto de origen original ya está en uso, PAT asigna el primer número de puerto disponible a partir del comienzo del grupo de puertos apropiado 0-511, 512-1023 o 1024-65535.
 
 {:.subsubsection}
 #### Ejemplo de funcionamiento PAT
